# Mental-Health-Simple-Chatbot

./: .gitignore  pyproject.toml
data/: intents.json
mental_health_chatbot/: app.py  customdataset.py  model.py  model_mental_health.pth  text_preprocessing.py  train.py
