[tool.poetry]
name = "mental-health-chatbot"
version = "0.1.0"
description = ""
authors = ["my name <me@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8.1"
torch = "^2.1.0"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
